--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="map_api_key">AIzaSyAMy78wKfpM8eKXtr94jqS38jsgQMDKQzA</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="Logout">Logout</string>
+
 </resources>
