--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="str_last_name">LASTNAME</string>
     <string name="str_signup_hint4">What should I call you?</string>
     <string name="str_signup_hint5">Let me save both your phone number and fax number</string>
+    <string name="str_signup_verify">Enter the verification code sent to your phone</string>
     <string name="str_phone">PHONE</string>
     <string name="str_fax">FAX</string>
     <string name="str_address">ADDRESS</string>
@@ -75,6 +76,7 @@
     <string name="str_sms">SMS</string>
     <string name="str_email">Email</string>
     <string name="str_no_invite">No Invite</string>
+    <string name="str_verify">VERIFICATION</string>
     <string name="str_territory">TERRITORY</string>
 
     <string name="str_signup_hint14">Would you like to add your boss info now or later?</string>
