--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,12 +131,15 @@
     <!-- Schedule -->
     <string name="schedule_add_an_activity">Add an Activity</string>
     <string name="schedule_hint_string">You have not created any schedule yet. Let#s do this%</string>
+    <string name="schedule_employee_hint_string">You have'nt added an employee yet, Adding them is easy. Add to follow their activities</string>
     <string name="schedule_create_schedule_btn">+ CREATE SCHEDULE</string>
     <string name="schedule_hint_string1">Oops! We can%t find any client in your list</string>
     <string name="schedule_hint_string2">Create New Client to Schedule that you would like to schedule an appointment with</string>
     <string name="schedule_hint_string3">You have more lots of clients? Import via CSV, Excel using our website. It#s easy GO</string>
     <string name="schedule_add_client_btn">+ ADD CLIENT</string>
     <string name="schedule_create_new_schedule_btn">+ CREATE NEW SCHEDULE</string>
+    <string name="schedule_add_employee_btn">+ ADD EMPLOYEE</string>
+    <string name="schedule_string_appointment">Lorem ipsum dolor sit amet, hello you there i mean you consectetur adipiscing elit. Etiam molestie tortor sed tellus posuere auctor. Nullam ultricies semper purus, et rhoncus leo efficitur consectetur</string>
 
     <string name="alert_valide_email">*Please enter a valid email address</string>
     <string name="alert_valide_password">*Please enter password</string>
