--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -170,5 +170,6 @@
     <string name="title_activity_profile">ProfileActivity</string>
     <string name="title_activity_pager">PagerActivity</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="title_activity_send_invite">SendInviteActivity</string>
 
 </resources>
