--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -172,4 +172,5 @@
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="title_activity_send_invite">SendInviteActivity</string>
 
+    <string name="google_maps_api_key">AIzaSyAmhxTCZkCnklRY7lMOiL7SL8yQC4NmkNw</string>
 </resources>
