--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,9 +12,9 @@
     <string name="str_splash">Your tool to be an exceptional rep for your clients and business</string>
     <string name="connection_error">Error connecting to server.</string>
 
-    <string name="str_register">REGISTER</string>
-    <string name="str_signin">SIGN IN</string>
-    <string name="str_login">LOGIN</string>
+    <string name="str_register">Register</string>
+    <string name="str_signin">Sign In</string>
+    <string name="str_login">Login</string>
     <string name="str_done">Done!</string>
     <string name="str_back">Back</string>
     <string name="str_hint_email">Email Address</string>
@@ -38,18 +38,18 @@
     </string-array>
 
     <!-- Sign Up -->
-    <string name="str_signup">SIGN UP</string>
+    <string name="str_signup">Sign Up</string>
     <string name="str_signup_hint1">What is your email address?</string>
-    <string name="str_signup_hint2">What should your password be?</string>
+    <string name="str_signup_hint2">Provide your password?</string>
     <string name="str_signup_hint_email">EMAIL</string>
     <string name="str_signup_hint_password">PASSWORD</string>
     <string name="str_continue">CONTINUE SETUP</string>
     <string name="str_add_picture">+ADD PICTURE</string>
     <string name="str_signup_hint3">Please tell me more about yourself so I can better server you</string>
-    <string name="str_profile">SKIP</string>
+    <string name="str_profile">SKIP SETUP</string>
     <string name="str_first_name">FIRST NAME</string>
     <string name="str_last_name">LAST NAME</string>
-    <string name="str_signup_hint4">What should I call you?</string>
+    <string name="str_signup_hint4">Enter your name?</string>
     <string name="str_signup_hint5">Let me save both your phone number and fax number</string>
     <string name="str_phone">PHONE</string>
     <string name="str_fax">FAX</string>
@@ -143,8 +143,8 @@
     <string name="schedule_string_appointment">Lorem ipsum dolor sit amet, hello you there i mean you consectetur adipiscing elit. Etiam molestie tortor sed tellus posuere auctor. Nullam ultricies semper purus, et rhoncus leo efficitur consectetur</string>
 
     <string name="alert_valide_email">*Please enter a valid email address</string>
-    <string name="alert_valide_password">*Please enter password</string>
-    <string name="alert_valide_first_name">*Please enter first name</string>
+    <string name="alert_valide_password">Please enter password</string>
+    <string name="alert_valide_first_name">Please enter first name</string>
     <string name="alert_valide_last_name">*Please enter last name</string>
 
     <string name="alert_valide_address">*Please enter address</string>
