--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -173,4 +173,5 @@
     <string name="title_activity_send_invite">SendInviteActivity</string>
 
     <string name="google_maps_api_key">AIzaSyC0m7wUq4hxxLG3D4YA63U6Qa4AhAFb-4M</string>
+    <string name="track_progress">Track your progress with a line, this is a great way to measure how you are doing over time. You can start now</string>
 </resources>
