--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -174,4 +174,5 @@
 
     <string name="google_maps_api_key">AIzaSyC0m7wUq4hxxLG3D4YA63U6Qa4AhAFb-4M</string>
     <string name="track_progress">Track your progress with a line, this is a great way to measure how you are doing over time. You can start now</string>
+    <string name="lorem">Lorem ipsum lorem ipsum lorep inmun ghryfu yu vaety barety asahsh asas kksas ksas</string>
 </resources>
