--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -175,4 +175,38 @@
     <string name="google_maps_api_key">AIzaSyC0m7wUq4hxxLG3D4YA63U6Qa4AhAFb-4M</string>
     <string name="track_progress">Track your progress with a line, this is a great way to measure how you are doing over time. You can start now</string>
     <string name="lorem">Lorem ipsum lorem ipsum lorep inmun ghryfu yu vaety barety asahsh asas kksas ksas</string>
+
+
+
+    <!--fragment_profile starts here-->
+    <string name="edit_personal_info">Edit Personal Info</string>
+    <string name="notifications">Notifications</string>
+    <string name="change_password">Change Password</string>
+    <string name="industries">Industries</string>
+    <string name="privacy">Privacy</string>
+    <string name="help">Help</string>
+    <string name="logout">Logout</string>
+    <!--fragment_profile ends here-->
+
+    <!--fragment_change_passwrod starts here-->
+    <string name="current_password">Current password</string>
+    <string name="new_password">New password</string>
+    <string name="new_password_again">New password, again</string>
+    <string name="save_changes">Save Changes</string>
+    <!--fragment_change_passwrod ends here-->
+
+    <!--fragment_industry starts here-->
+    <string name="type_name_to_add_industry">TYPE NAME TO ADD NEW INDUSTRY</string>
+    <!--fragment_industry starts here-->
+
+    <!--fragment_change_address starts here-->
+    <string name="office">OFFICE</string>
+    <string name="street_address">Street Address</string>
+    <string name="zip_code">Zip Code</string>
+    <string name="city">City</string>
+    <string name="home">HOME</string>
+    <!--fragment_change_address starts here-->
+
+
+
 </resources>
